--- a/Reto 5/AndroidTicTacToe-Tutorial2/gradle.properties
+++ b/Reto 5/AndroidTicTacToe-Tutorial2/gradle.properties
@@ -7,10 +7,14 @@
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.jvmargs=-Xmx2048M
 #
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Aug 22 18:27:54 COT 2016
+#Mon Sep 19 18:39:27 COT 2016
+systemProp.http.proxyPassword=SabioCaldas2
+systemProp.http.proxyHost=proxyapp.unal.edu.co
+org.gradle.jvmargs=-Xmx2048M
+systemProp.http.proxyUser=ceortegal
+systemProp.http.proxyPort=8080
